[feature]新增跨域访问配置；修复使用redisTemplate存储数据,key前出现\xAC\xED\x00\x05t\x00；新增添加用例组的接口；nexus3.0版本获取release地址修改；
[feature] modify README

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,13 +30,14 @@ dubbo.postman.env=LOCAL
 dubbo.api.jar.dir=c:/tmp/dubbo-postman
 
 #nexus地址
-nexus.url=http://nexus.addr.com/nexus/service/local/artifact/maven/redirect
+nexus.url=http://localhost:8081/repository/maven-releases/
 
-node1.ip=192.168.11.29:26001
-node2.ip=192.168.11.32:26001
-node3.ip=192.168.11.20:26001
-sentinel.master=master-dev
-redis.password=wIvJt@_redis
+#sentinel地址
+node1.ip=192.168.105.177:26379
+node2.ip=192.168.105.177:26380
+node3.ip=192.168.105.177:26381
+sentinel.master=mymaster
+redis.password=123456
 
 #cas地址
 app.service.home=http://127.0.0.1:8080
